# alien

./: README.md
admin/: Makefile.in  bootstrap  build.xml  configure.in
admin/etc/alien-certs/: alien-host-ssl.conf
admin/etc/openldap/: ldapfilter.conf  ldapsearchprefs.conf
admin/etc/openldap/schema/: alien.schema  pki.schema
admin/etc/rc.d/init.d/: alien-ldap  alien-mysqld  aliend
admin/scripts/: ConvertDB.sql  CreateOrgDB.pl  CreateOrgLDAP.pl  CreateOrgServices.pl  copyCatalogue.pl  di_optimize_guid.pl  sync_newstruc.pl  sync_newstruc_sql.pl
admin/scripts/Fork_parallel/: part1.pl  part2.pl  part3.pl
admin/scripts/Parallel/: part1.pl  part3.pl  part4.pl
admin/trunk/: Makefile.in  build.xml  configure.in
admin/trunk/etc/: my.cnf
admin/trunk/etc/openldap/: ldap.conf  ldaptemplates.conf  slapd.alien.conf  slapd.conf
admin/trunk/etc/openldap/schema/: alien.schema
admin/trunk/etc/rc.d/init.d/: alien-httpd  alien-ldap  alien-mysqld  aliend
admin/trunk/scripts/: ConvertDB.sql  CreateOrgDB.pl  CreateOrgLDAP.pl  CreateOrgServices.pl  CreateOrgSite.pl  copyCatalogue.pl  di_optimize.pl  newstruc.pl  sync_newstruc.pl  sync_newstruc2.pl
admin/trunk/scripts/Parallel/: part2.pl  part3remaining.pl
arc/: Makefile.PL
common/: Makefile.PL  README
common/scripts/: Alien.sh  AlienServices.sh  Authen.pl  CleanSemaphores.sh  Command.pl  ConvertTo2-13.pl  ConvertTo2-17.pl  CreateMan.sh  CreateOrgPortal.pl  CreateOrgSite.pl  FTD.pl  GetConfigVar.pl  alien  (+15 more)
doc/: Makefile.in  configure.in
lcg/: META.yml  README
tests/: Makefile.in  configure.in  killAll.sh
(+1095 files in other folders)
