dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.in)

# Configuration items

AC_PREFIX_DEFAULT([$ALIEN_ROOT])

AC_ARG_WITH(build_dir,
            [  --with-build-dir=dir     build directory],
            [localcache=$with_build_dir],
            [localcache=../build])

AC_ARG_WITH(dest_dir,
            [  --with-dest-dir=dir      destination directory for packaging],
            destdir=$with_dest_dir,
            destdir=../)

AC_ARG_WITH(stage_dir,
            [  --with-stage-dir=dir     stage directory],
            stagedir=$with_stage_dir,
            stagedir=../../stage)

AC_ARG_WITH(glite_prefix,
            [  --with-glite-prefix=dir  glite install directory],
            [glite_prefix=$with_glite_prefix],
            [glite_prefix=/opt/glite])

AC_SUBST(localcache)
AC_SUBST(destdir)
AC_SUBST(stagedir)
AC_SUBST(glite_prefix)

AC_OUTPUT(Makefile)
